--- a/packages/select/package.json
+++ b/packages/select/package.json
@@ -21,6 +21,7 @@
     "dist:bundle": "cross-env NODE_ENV=production webpack",
     "dist:css": "css-dist lib/css/*.css",
     "dist:verify": "assert-package-layout",
+    "generate-graphext-css": "yarn run compile:css && add-js-version",
     "lint": "run-p lint:scss lint:ts",
     "lint:scss": "sass-lint",
     "lint:ts": "ts-lint",
