--- a/packages/table/package.json
+++ b/packages/table/package.json
@@ -33,7 +33,7 @@
     "verify": "npm-run-all compile -p dist test lint"
   },
   "dependencies": {
-    "@blueprintjs/core": "3.9.0-graphext",
+    "@blueprintjs/core": "3.9.0-graphext4",
     "classnames": "^2.2",
     "prop-types": "^15.6.0",
     "tslib": "^1.9.0"
