--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     volumes:
       - .:/hostdata
       - node_modules:/node_modules
+      - ~/.npmrc:/root/.npmrc
     ports:
       - 9000:9000
 volumes:
