--- a/packages/docs-theme/package.json
+++ b/packages/docs-theme/package.json
@@ -28,8 +28,8 @@
     "verify": "npm-run-all compile -p dist lint"
   },
   "dependencies": {
-    "@blueprintjs/core": "^3.0.0",
-    "@blueprintjs/select": "^3.0.0",
+    "@blueprintjs/core": "3.9.0-graphext6",
+    "@blueprintjs/select": "3.3.0-graphext2",
     "classnames": "^2.2",
     "documentalist": "^1.4.0",
     "fuzzaldrin-plus": "^0.6.0",
