--- a/packages/docs-app/package.json
+++ b/packages/docs-app/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "@blueprintjs/core": "3.9.0-graphext6",
-    "@blueprintjs/datetime": "^3.0.0",
+    "@blueprintjs/datetime": "3.4.0-graphext1",
     "@blueprintjs/docs-data": "^3.0.0",
     "@blueprintjs/docs-theme": "^3.0.0",
     "@blueprintjs/icons": "3.3.0-graphext3",
