--- a/package.json
+++ b/package.json
@@ -62,8 +62,7 @@
     "node": ">=6.1"
   },
   "resolutions": {
-    "node-gyp": "^3.6.3",
-    "tsutils": "2.19.0"
+    "node-gyp": "^3.6.3"
   },
   "repository": {
     "type": "git",
