--- a/packages/labs/package.json
+++ b/packages/labs/package.json
@@ -34,8 +34,8 @@
     "verify": "npm-run-all compile -p dist test lint"
   },
   "dependencies": {
-    "@blueprintjs/core-graphext1": "^3.12.0",
-    "@blueprintjs/select-graphext1": "^3.6.0",
+    "@blueprintjs/core": "^3.12.0-graphext1",
+    "@blueprintjs/select": "^3.6.0-graphext1",
     "@blueprintjs/timezone": "^3.3.0",
     "classnames": "^2.2",
     "tslib": "^1.9.0"
