--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -41,7 +41,7 @@
     "verify": "npm-run-all compile -p dist test lint"
   },
   "dependencies": {
-    "@blueprintjs/icons": "^3.7.0-graphext1",
+    "@blueprintjs/icons": "3.7.0-graphext1",
     "@types/dom4": "^2.0.1",
     "classnames": "^2.2",
     "dom4": "^2.0.1",
