--- a/packages/datetime/package.json
+++ b/packages/datetime/package.json
@@ -35,7 +35,7 @@
     "verify": "npm-run-all compile -p dist test lint"
   },
   "dependencies": {
-    "@blueprintjs/core": "^3.15.0-graphext1",
+    "@blueprintjs/core": "3.15.0-graphext1",
     "classnames": "^2.2",
     "react-day-picker": "^7.1.10",
     "tslib": "^1.9.0"
