--- a/packages/docs-theme/package.json
+++ b/packages/docs-theme/package.json
@@ -30,8 +30,8 @@
     "verify": "npm-run-all compile -p dist lint"
   },
   "dependencies": {
-    "@blueprintjs/core": "^3.15.0-graphext1",
-    "@blueprintjs/select": "^3.8.0-graphext1",
+    "@blueprintjs/core": "3.15.0-graphext1",
+    "@blueprintjs/select": "3.8.0-graphext1",
     "classnames": "^2.2",
     "documentalist": "^1.4.0",
     "fuzzaldrin-plus": "^0.6.0",
