--- a/packages/select/package.json
+++ b/packages/select/package.json
@@ -36,7 +36,7 @@
     "verify": "npm-run-all compile -p dist test lint"
   },
   "dependencies": {
-    "@blueprintjs/core": "^3.15.0-graphext1",
+    "@blueprintjs/core": "3.15.0-graphext1",
     "classnames": "^2.2",
     "tslib": "^1.9.0"
   },
