Revert select changes

--- a/packages/labs/package.json
+++ b/packages/labs/package.json
@@ -34,8 +34,8 @@
     "verify": "npm-run-all compile -p dist test lint"
   },
   "dependencies": {
-    "@blueprintjs/core": "3.15.0-graphext9-beta",
-    "@blueprintjs/select": "3.8.0-graphext9-beta",
+    "@blueprintjs/core": "3.15.0-graphext10",
+    "@blueprintjs/select": "3.8.0-graphext10",
     "@blueprintjs/timezone": "^3.3.0",
     "classnames": "^2.2",
     "tslib": "^1.9.0"
