--- a/packages/docs-app/package.json
+++ b/packages/docs-app/package.json
@@ -16,14 +16,14 @@
     "verify": "run-p dist lint"
   },
   "dependencies": {
-    "@blueprintjs/core": "3.15.0-graphext9-beta",
-    "@blueprintjs/datetime": "3.8.0-graphext9-beta",
+    "@blueprintjs/core": "3.15.0-graphext10",
+    "@blueprintjs/datetime": "3.8.0-graphext10",
     "@blueprintjs/docs-data": "^3.0.0",
     "@blueprintjs/docs-theme": "^3.1.0",
-    "@blueprintjs/icons": "3.7.0-graphext9-beta",
+    "@blueprintjs/icons": "3.7.0-graphext10",
     "@blueprintjs/labs": "^0.16.2",
-    "@blueprintjs/select": "3.8.0-graphext9-beta",
-    "@blueprintjs/table": "3.5.0-graphext9-beta",
+    "@blueprintjs/select": "3.8.0-graphext10",
+    "@blueprintjs/table": "3.5.0-graphext10",
     "@blueprintjs/test-commons": "^0.9.0",
     "@blueprintjs/timezone": "^3.4.0",
     "@types/downloadjs": "^1.4.0",
