--- a/packages/timezone/package.json
+++ b/packages/timezone/package.json
@@ -35,8 +35,8 @@
     "verify": "npm-run-all compile -p dist test lint"
   },
   "dependencies": {
-    "@blueprintjs/core": "3.15.0-graphext9-beta",
-    "@blueprintjs/select": "3.8.0-graphext9-beta",
+    "@blueprintjs/core": "3.15.0-graphext10",
+    "@blueprintjs/select": "3.8.0-graphext10",
     "classnames": "^2.2",
     "moment": "^2.14.1",
     "moment-timezone": "^0.5.13",
