Add -gray6 & change MultiSelect background color (dark) from -gray0 to -gray6

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@
 version: '3'
 services:
   bp:
-    image: development
+    image: development_old
     command: sh -c 'yarn dev'
     working_dir: /hostdata
     volumes:
