--- a/.drone.yml
+++ b/.drone.yml
@@ -43,12 +43,13 @@ steps:
   - ssh-keyscan github.com >> /root/.ssh/known_hosts
   - git config user.email "drone@graphext.com"
   - git config user.name "drone"
+  - sleep 1000
   - yarn deploy
   environment:
     DEPLOY_KEY:
      from_secret: deploy-key
 ---
 kind: signature
-hmac: cd23e7b9b22ea48f498606868ebdd7a745f58cef82a67ae620b3d62f245bb666
+hmac: c3a4d882e1c7f79969534046f7daa773f200cb796ccb27e5219d1d23e417959c
 
 ...
